# HSE_CPP

Array/: CMakeLists.txt  array.h
BigInteger/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_test.cpp
Geometry/: CMakeLists.txt  circle.h  geometry_main.cpp  i_shape.h  line.h  point.h  polygon.h  ray.h  segment.h  vector.h
Geometry/src/: circle.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  segment.cpp  vector.cpp
Matrix/: CMakeLists.txt  matrix.h  matrix_test.cpp  my_fraction.cpp  rational.h
Range/: CMakeLists.txt  range.cpp  range.h
UniquePtr/: unique_ptr.h
UnorderedSet/: CMakeLists.txt  unordered_set.h
Vector/: CMakeLists.txt  vector.h  vector_public_test.cpp
sharedPtr/: CMakeLists.txt  shared_ptr.h  shared_ptr_public_test.cpp
